# financas_pessoal_v2

./: .gitignore  Dockerfile  Extrato Conta Corrente-011120211122.xls  Makefile  README.md  Untitled.ipynb  app.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
model_cred_labels/: eda.ipynb
pages/: ecommerce.py
src/: banks.py  classifier.py  llm_agent.py  llm_agent_langchain.py  parcelas.py  postgres.py  scrapers.py  sidebars.py
tests/: .gitignore  tests.ipynb
