[project]
name = "financas-pessoal-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.14.3",
    "joblib>=1.3.0",
    "langchain-core==1.2.16",
    "langchain-google-genai==4.2.1",
    "langchain-openai==1.1.10",
    "numpy==2.4.2",
    "pandas<3.0.0",
    "plotly==6.5.2",
    "psycopg2-binary>=2.9.11",
    "python-dateutil==2.8.2",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "sqlalchemy==2.0.47",
    "streamlit==1.44.0",
]
